--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -73,9 +73,9 @@ jobs:
         #./kustomize build . | kubectl apply -f -
         # kubectl rollout status deployment/$DEPLOYMENT_NAME
         # kubectl delete service clusterip awacsdemo
-        kubectl create deployment awacsdemo --image=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA --dry-run -o=yaml > deployment.yaml
+        kubectl create deployment adminserver --image=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA --dry-run -o=yaml > deployment.yaml
         echo --- >> deployment.yaml # i am new to these things
-        kubectl create service clusterip awacsdemo --tcp=8080:8080 --dry-run -o=yaml >> deployment.yaml
+        kubectl create service clusterip adminserver --tcp=8765:8765 --dry-run -o=yaml >> deployment.yaml
         echo "-----------------------------------------------"
         kubectl apply -f deployment.yaml
         echo "-----------------------------------------------"
@@ -85,7 +85,7 @@ jobs:
         echo "-----------------------------------------------"
         kubectl get services -o wide
         echo "-----------------------------------------------"
-        # kubectl expose deployment awacsdemo --type=LoadBalancer --name=clusterip --port 8080
+        kubectl expose deployment adminserver --type=LoadBalancer --name=clusterip --port 8765
         echo "-----------------------------------------------"
         kubectl get all
         echo "-----------------------------------------------"
