--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 server.port=8765
 spring.boot.admin.ui.title=AWACS
 spring.boot.admin.discovery.enabled=true
+
+spring.boot.admin.client.username=awacs
+spring.boot.admin.client.password=awacs
+
+spring.security.user.name=awacs
+spring.security.user.password=awacs
+
+spring.boot.admin.client.instance.metadata.user.name=${spring.security.user.name}
+spring.boot.admin.client.instance.metadata.user.password=${spring.security.user.password}
+
+spring.boot.admin.routes.endpoints=env, metrics, trace, jolokia, info, configprops
