--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<artifactId>admin-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>admin-server</name>
-	<description>cloud event consumer standalone</description>
+	<description>admin server standalone</description>
 
 	<properties>
 		<java.version>8</java.version>
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>de.codecentric</groupId>
 			<artifactId>spring-boot-admin-server-ui-login</artifactId>
-			<version>1.5.7</version>
+			<version>1.5.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
