--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,8 @@
 
 	<properties>
 		<java.version>8</java.version>
-		<spring-boot-admin.version>2.3.0</spring-boot-admin.version>
+		<spring-boot-admin.version>2.3.1</spring-boot-admin.version>
+		<maven.test.skip>true</maven.test.skip>
 	</properties>
 
 	<dependencies>
