added security to admin server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 server.port=8765
 spring.main.allow-bean-definition-overriding=true
-
 spring.boot.admin.ui.title=AWACS Cloud Manage
-
+spring.boot.admin.context-path=adminserver
 spring.security.user.name=awacs
 spring.security.user.password=awacs
+
+spring.boot.admin.ui.public-url=https://app.awacscloud.tech/adminserver
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=password
+server.ssl.key-alias=tomcat
+
+security.require-ssl=true
