--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,21 @@
 server.port=8765
 spring.main.allow-bean-definition-overriding=true
 spring.boot.admin.ui.title=AWACS Cloud Manage
-spring.boot.admin.context-path=adminserver
+
+spring.boot.admin.username=awacs
+spring.boot.admin.password=awacs
+
+spring.boot.admin.client.username=awacs
+spring.boot.admin.client.password=awacs
+
 spring.security.user.name=awacs
 spring.security.user.password=awacs
 
-spring.boot.admin.ui.public-url=https://app.awacscloud.tech/adminserver
-server.ssl.enabled=true
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store=classpath:keystore.p12
-server.ssl.key-store-password=password
-server.ssl.key-alias=tomcat
 
-security.require-ssl=true
+#server.ssl.enabled=true
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=classpath:keystore.p12
+#server.ssl.key-store-password=password
+#server.ssl.key-alias=tomcat
+
+#security.require-ssl=true
