--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -35,7 +35,7 @@ jobs:
       uses: actions/checkout@v2
 
     # Setup gcloud CLI
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@0.1.3
+    - uses: google-github-actions/setup-gcloud@master
       with:
         service_account_key: ${{ secrets.GKE_SA_KEY }}
         project_id: ${{ secrets.GKE_PROJECT }}
@@ -61,6 +61,10 @@ jobs:
     - name: Publish
       run: |-
         docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
+        echo "add tag"
+        gcloud container images add-tag \
+        gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA \
+        gcr.io/$PROJECT_ID/$IMAGE:latest
     # Set up kustomize
     - name: Set up Kustomize
       run: |-
