--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -77,9 +77,9 @@ jobs:
         #./kustomize build . | kubectl apply -f -
         # kubectl rollout status deployment/$DEPLOYMENT_NAME
         # kubectl delete service clusterip awacsdemo
-        kubectl create deployment adminserver --image=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA --dry-run -o=yaml > deployment.yaml
-        echo --- >> deployment.yaml # i am new to these things
-        kubectl create service clusterip adminserver --tcp=8765:8765 --dry-run -o=yaml >> deployment.yaml
+        ###kubectl create deployment adminserver --image=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA --dry-run -o=yaml > deployment.yaml
+        ###echo --- >> deployment.yaml # i am new to these things
+        ###kubectl create service clusterip adminserver --tcp=8765:8765 --dry-run -o=yaml >> deployment.yaml
         echo "-----------------------------------------------"
         kubectl apply -f deployment.yaml
         echo "-----------------------------------------------"
