--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8765
+server.port=${PORT:8765}
 spring.main.allow-bean-definition-overriding=true
 spring.boot.admin.ui.title=AWACS Cloud Manage
 
